--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,7 +41,7 @@ a {
 }
 
 a:hover {
-  color: #F28123;
+  color: #8c932e;
   text-decoration: none;
 }
 
@@ -205,7 +205,7 @@ p:last-child {
   position: absolute;
   top: calc(50% - 3vmax);
   left: calc(50% - 3vmax);
-  border-left: 3px solid #F28123;
+  border-left: 3px solid #8c932e;
   border-radius: 100%;
   -webkit-animation: spinLeft 800ms linear infinite;
   animation: spinLeft 800ms linear infinite;
@@ -216,10 +216,11 @@ p:last-child {
   width: 6vmax;
   height: 6vmax;
   display: block;
+
   position: absolute;
   top: calc(50% - 3vmax);
   left: calc(50% - 3vmax);
-  border-left: 3px solid #F28123;
+  border-left: 3px solid #8c932e;
   border-radius: 100%;
   -webkit-animation: spinLeft 800ms linear infinite;
   animation: spinLeft 800ms linear infinite;
@@ -402,7 +403,7 @@ p:last-child {
 }
 
 .orange-text {
-  color: #F28123;
+  color: #8c932e;
 }
 
 .blue-bg {
@@ -412,7 +413,7 @@ p:last-child {
 a.boxed-btn {
   font-family: 'Poppins', sans-serif;
   display: inline-block;
-  background-color: #F28123;
+  background-color: #8c932e;
   color: #fff;
   padding: 10px 20px;
 }
@@ -421,7 +422,7 @@ a.bordered-btn {
   font-family: 'Poppins', sans-serif;
   display: inline-block;
   color: #fff;
-  border: 2px solid #F28123;
+  border: 2px solid #8c932e;
   padding: 7px 20px;
 }
 
@@ -436,7 +437,7 @@ a.read-more-btn {
 }
 
 a.read-more-btn:hover {
-  color: #F28123;
+  color: #8c932e;
 }
 
 a.boxed-btn, a.bordered-btn, a.cart-btn {
@@ -457,7 +458,7 @@ a.boxed-btn, a.bordered-btn, a.cart-btn {
   bottom: 0px;
   width: 50px;
   height: 2px;
-  background-color: #F28123;
+  background-color: #8c932e;
   margin: 0 auto;
 }
 
@@ -479,7 +480,7 @@ a.boxed-btn, a.bordered-btn, a.cart-btn {
 }
 
 .breadcrumb-text p {
-  color: #F28123;
+  color: #8c932e;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 7px;
@@ -626,7 +627,7 @@ ul.sub-menu li:last-child {
 }
 
 .mean-bar a.meanmenu-reveal {
-  background-color: #F28123;
+  background-color: #8c932e;
 }
 
 .main-menu-wrap {
@@ -690,11 +691,11 @@ nav.main-menu ul ul.sub-menu li a {
 }
 
 nav.main-menu ul li.current-list-item > a {
-  color: #F28123;
+  color: #8c932e;
 }
 
 nav.main-menu li:hover > a {
-  color: #F28123;
+  color: #8c932e;
 }
 
 nav.main-menu li a {
@@ -710,7 +711,7 @@ nav.main-menu li a {
 }
 
 .top-header-area .header-icons a:hover {
-  color: #F28123;
+  color: #8c932e;
 }
 
 .sticky-wrapper {
@@ -784,7 +785,7 @@ a.mobile-show {
   padding: 15px;
   width: 60%;
   background-color: transparent;
-  border-bottom: 1px solid #F28123;
+  border-bottom: 1px solid #8c932e;
   display: block;
   margin: 0 auto;
   text-align: center;
@@ -796,7 +797,7 @@ a.mobile-show {
 
 .search-bar-tablecell button[type=submit] {
   border: none;
-  background-color: #F28123;
+  background-color: #8c932e;
   padding: 15px 30px;
   cursor: pointer;
   display: inline-block;
@@ -881,7 +882,7 @@ h2.widget-title:after {
   bottom: 0;
   width: 20px;
   height: 2px;
-  background-color: #F28123;
+  background-color: #8c932e;
   content: "";
 }
 
@@ -921,7 +922,7 @@ h2.widget-title:after {
   width: 20%;
   border: none;
   background-color: #012738;
-  color: #F28123;
+  color: #8c932e;
   padding: 14px 0;
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
@@ -946,7 +947,7 @@ h2.widget-title:after {
 }
 
 .copyright a {
-  color: #F28123;
+  color: #8c932e;
   font-weight: 700;
 }
 
@@ -988,7 +989,7 @@ h2.widget-title:after {
   content: "\f105";
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
-  color: #F28123;
+  color: #8c932e;
 }
 
 /* -----------------------------------------------------------------------------
@@ -1014,7 +1015,7 @@ a.boxed-btn {
 
 a.boxed-btn:hover {
   background-color: #051922;
-  color: #F28123;
+  color: #8c932e;
 }
 
 a.bordered-btn {
@@ -1024,7 +1025,7 @@ a.bordered-btn {
 }
 
 a.bordered-btn:hover {
-  background-color: #F28123;
+  background-color: #8c932e;
   color: #fff;
 }
 
@@ -1035,7 +1036,7 @@ ul.sub-menu a {
 }
 
 ul.sub-menu li:hover a {
-  color: #F28123;
+  color: #8c932e;
 }
 
 .single-tof-box {
@@ -1057,7 +1058,7 @@ a.video-play-btn {
 
 a.video-play-btn:hover {
   background-color: #333;
-  color: #F28123;
+  color: #8c932e;
 }
 
 .latest-news-bg {
@@ -1083,7 +1084,7 @@ a.tof-btn i {
 }
 
 a.tof-btn:hover {
-  color: #F28123;
+  color: #8c932e;
 }
 
 a.tof-btn:hover i {
@@ -1122,7 +1123,7 @@ a.tof-btn:hover i {
 }
 
 .footer-box.pages ul li:hover a {
-  color: #F28123;
+  color: #8c932e;
 }
 
 .footer-box.subscribe form button {
@@ -1132,12 +1133,12 @@ a.tof-btn:hover i {
 }
 
 .footer-box.subscribe form button:hover {
-  background-color: #F28123;
+  background-color: #8c932e;
   color: #051922;
 }
 
 .social-icons ul li:hover a {
-  color: #F28123;
+  color: #8c932e;
 }
 
 .social-icons ul li a {
@@ -1154,7 +1155,7 @@ ul.social-link-team li a {
 
 ul.social-link-team li a:hover {
   background-color: #051922;
-  color: #F28123;
+  color: #8c932e;
 }
 
 .counter-box {
@@ -1177,7 +1178,7 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
   background-color: #051922;
-  color: #F28123;
+  color: #8c932e;
 }
 
 div.owl-controls, .owl-controls div {
@@ -1197,7 +1198,7 @@ div.owl-controls div.owl-nav div:hover {
 }
 
 .pagination-wrap ul li:hover a {
-  background-color: #F28123;
+  background-color: #8c932e;
 }
 
 .icons a i {
@@ -1207,7 +1208,7 @@ div.owl-controls div.owl-nav div:hover {
 }
 
 .icons a:hover i {
-  color: #F28123;
+  color: #8c932e;
 }
 
 .tof-text a.tof-btn {
@@ -1245,7 +1246,7 @@ a.cart-btn {
 
 a.cart-btn:hover {
   background-color: #051922;
-  color: #F28123;
+  color: #8c932e;
 }
 
 .recent-posts ul li {
@@ -1265,7 +1266,7 @@ ul.sub-menu li a {
 }
 
 ul.sub-menu li:hover a {
-  color: #F28123 !important;
+  color: #8c932e !important;
 }
 
 .sidebar-section ul li a {
@@ -1285,7 +1286,7 @@ ul.sub-menu li:hover a {
 }
 
 .comment-text-body h4 a:hover {
-  color: #F28123;
+  color: #8c932e;
 }
 
 ul.product-share li a {
@@ -1295,7 +1296,7 @@ ul.product-share li a {
 }
 
 ul.product-share li:hover a {
-  color: #F28123;
+  color: #8c932e;
 }
 
 .service-menu ul li a {
@@ -1352,7 +1353,7 @@ a.mobile-show.search-bar-icon {
 }
 
 a.mobile-show.search-bar-icon:hover {
-  color: #F28123;
+  color: #8c932e;
 }
 
 /* -----------------------------------------------------------------------------
@@ -1399,7 +1400,7 @@ html, body {
 }
 
 .hero-text p.subtitle {
-  color: #F28123;
+  color: #8c932e;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 7px;
@@ -1456,7 +1457,7 @@ html, body {
 }
 
 input[type="submit"] {
-  background-color: #F28123;
+  background-color: #8c932e;
   color: #051922;
   font-weight: 700;
   text-transform: uppercase;
@@ -1525,7 +1526,7 @@ input[type="submit"] {
 div.owl-controls, .owl-controls div {
   height: auto;
   top: 50%;
-  color: #F28123;
+  color: #8c932e;
   font-size: 48px;
 }
 
@@ -1575,12 +1576,12 @@ div.owl-controls, .owl-controls div {
   display: block;
   font-size: 24px;
   margin-right: 15px;
-  color: #F28123;
+  color: #8c932e;
   width: 65px;
   height: 65px;
   text-align: center;
   line-height: 60px;
-  border: 2px #F28123 dotted;
+  border: 2px #8c932e dotted;
   border-radius: 999px;
 }
 
@@ -1699,7 +1700,7 @@ p.excerpt {
 }
 
 .pagination-wrap ul li a.active {
-  background-color: #F28123;
+  background-color: #8c932e;
 }
 
 .single-artcile-bg {
@@ -1922,7 +1923,7 @@ span.comment-date {
   margin-top: 8px;
   text-align: center;
   border-radius: 50%;
-  background-color: #F28123;
+  background-color: #8c932e;
 }
 
 .cart-banner .image-column .price-box .inner-price .price {
@@ -1980,7 +1981,7 @@ span.comment-date {
   padding: 8px 20px 14px;
   text-transform: capitalize;
   text-align: center;
-  border: 2px solid #F28123;
+  border: 2px solid #8c932e;
 }
 
 .time-countdown .counter-column .count {
@@ -1989,7 +1990,7 @@ span.comment-date {
   font-size: 30px;
   line-height: 1.4em;
   padding: 0px 0px;
-  color: #F28123;
+  color: #8c932e;
   font-weight: 700;
   letter-spacing: 1px;
 }
@@ -2046,7 +2047,7 @@ p.testimonial-body {
 ----------------------------------------------------------------------------- */
 a.video-play-btn {
   position: absolute;
-  background-color: #F28123;
+  background-color: #8c932e;
   color: #051922;
   width: 90px;
   height: 90px;
@@ -2133,7 +2134,7 @@ a.video-play-btn {
   position: relative;
   font-size: 60px;
   font-weight: 700;
-  color: #F28123;
+  color: #8c932e;
 }
 
 .shop-banner .sale-percent span {
@@ -2233,7 +2234,7 @@ ul.social-link-team li {
 
 ul.social-link-team li a {
   color: #fff;
-  background-color: #F28123;
+  background-color: #8c932e;
   width: 32px;
   height: 32px;
   line-height: 32px;
@@ -2298,7 +2299,7 @@ ul.social-link-team li a {
 .contact-form-box h4 i {
   position: absolute;
   left: -13%;
-  color: #F28123;
+  color: #8c932e;
   top: 2px;
 }
 
@@ -2321,7 +2322,7 @@ ul.social-link-team li a {
 
 .find-location p i {
   margin-right: 10px;
-  color: #F28123;
+  color: #8c932e;
 }
 
 #form_status span {
@@ -2396,8 +2397,8 @@ ul.social-link-team li a {
 }
 
 .product-filters ul li.active {
-  border: 2px solid #F28123;
-  background-color: #F28123;
+  border: 2px solid #8c932e;
+  background-color: #8c932e;
   color: #fff;
 }
 
@@ -2439,7 +2440,7 @@ p.product-price span {
 a.cart-btn {
   font-family: 'Poppins', sans-serif;
   display: inline-block;
-  background-color: #F28123;
+  background-color: #8c932e;
   color: #fff;
   padding: 10px 20px;
 }
@@ -2685,7 +2686,7 @@ tr.total-data td strong {
   font-weight: 900;
   line-height: 22px;
   margin-top: -11px;
-  color: #F28123;
+  color: #8c932e;
 }
 
 .billing-address-form form p:last-child {
