--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,7 +24,7 @@ body {
   font-size: 1rem;
   letter-spacing: 0.1px;
   line-height: 1.8;
-  color: #051922;
+  color: #86A789;
   overflow-x: hidden;
 }
 
@@ -41,7 +41,7 @@ a {
 }
 
 a:hover {
-  color: #8c932e;
+  color: #A9B388;
   text-decoration: none;
 }
 
@@ -54,7 +54,7 @@ h6, .h6 {
   font-family: "Poppins", sans-serif;
   font-weight: 700;
   margin: 0 0 1.25rem 0;
-  color: #051922;
+  color: #86A789;
 }
 
 h1:last-child, .h1:last-child,
@@ -150,7 +150,7 @@ p {
   font-size: 1rem;
   letter-spacing: 0.1px;
   line-height: 1.8;
-  color: #051922;
+  color: #86A789;
   margin: 0 0 1.25rem 0;
 }
 
@@ -175,6 +175,7 @@ p:last-child {
   background: #fff;
   overflow-x: hidden;
 }
+
 
 .loader-inner {
   position: absolute;
@@ -205,7 +206,7 @@ p:last-child {
   position: absolute;
   top: calc(50% - 3vmax);
   left: calc(50% - 3vmax);
-  border-left: 3px solid #8c932e;
+  border-left: 3px solid #A9B388;
   border-radius: 100%;
   -webkit-animation: spinLeft 800ms linear infinite;
   animation: spinLeft 800ms linear infinite;
@@ -219,7 +220,7 @@ p:last-child {
   position: absolute;
   top: calc(50% - 3vmax);
   left: calc(50% - 3vmax);
-  border-left: 3px solid #8c932e;
+  border-left: 3px solid #A9B388;
   border-radius: 100%;
   -webkit-animation: spinLeft 800ms linear infinite;
   animation: spinLeft 800ms linear infinite;
@@ -402,17 +403,19 @@ p:last-child {
 }
 
 .orange-text {
-  color: #8c932e;
+  color: #A9B388;
 }
 
 .blue-bg {
   background-color: #162133;
 }
 
+
+
 a.boxed-btn {
   font-family: 'Poppins', sans-serif;
   display: inline-block;
-  background-color: #8c932e;
+  background-color: #A9B388;
   color: #fff;
   padding: 10px 20px;
 }
@@ -421,14 +424,14 @@ a.bordered-btn {
   font-family: 'Poppins', sans-serif;
   display: inline-block;
   color: #fff;
-  border: 2px solid #8c932e;
+  border: 2px solid #A9B388;
   padding: 7px 20px;
 }
 
 a.read-more-btn {
   display: inline-block;
   margin-top: 15px;
-  color: #051922;
+  color: #86A789;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
@@ -436,7 +439,7 @@ a.read-more-btn {
 }
 
 a.read-more-btn:hover {
-  color: #8c932e;
+  color: #A9B388;
 }
 
 a.boxed-btn, a.bordered-btn, a.cart-btn {
@@ -457,7 +460,7 @@ a.boxed-btn, a.bordered-btn, a.cart-btn {
   bottom: 0px;
   width: 50px;
   height: 2px;
-  background-color: #8c932e;
+  background-color: #A9B388;
   margin: 0 auto;
 }
 
@@ -479,7 +482,7 @@ a.boxed-btn, a.bordered-btn, a.cart-btn {
 }
 
 .breadcrumb-text p {
-  color: #8c932e;
+  color: #A9B388;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 7px;
@@ -521,7 +524,7 @@ a.boxed-btn, a.bordered-btn, a.cart-btn {
 
 ----------------------------------------------------------------------------- */
 ul.navbar-nav li.nav-item a.nav-link, ul.navbar-nav li.nav-item.active a.nav-link {
-  color: #051922;
+  color: #86A789;
 }
 
 .top-header-area {
@@ -556,7 +559,7 @@ nav.main-menu ul li {
 }
 
 nav.main-menu ul li a {
-  color: #fff;
+  color: #000;
   font-weight: 700;
   display: block;
   padding: 15px;
@@ -626,7 +629,7 @@ ul.sub-menu li:last-child {
 }
 
 .mean-bar a.meanmenu-reveal {
-  background-color: #8c932e;
+  background-color: #A9B388;
 }
 
 .main-menu-wrap {
@@ -634,11 +637,11 @@ ul.sub-menu li:last-child {
 }
 
 .mean-container a.meanmenu-reveal {
-  color: #051922;
+  color: #86A789;
 }
 
 .mean-container a.meanmenu-reveal span {
-  background-color: #051922;
+  background-color: #86A789;
 }
 
 .mean-container .mean-nav ul li a {
@@ -665,7 +668,7 @@ nav.mean-nav > ul > li:first-child > a {
 }
 
 .header-icons a {
-  color: #fff;
+  color: #000;
   display: inline-block;
   padding: 10px;
 }
@@ -675,7 +678,7 @@ nav.mean-nav > ul > li:first-child > a {
 }
 
 .top-header-area.sepherate-header ul li > a, .top-header-area.sepherate-header .header-icons a {
-  color: #051922;
+  color: #86A789;
 }
 
 nav.main-menu ul ul.sub-menu li {
@@ -690,11 +693,11 @@ nav.main-menu ul ul.sub-menu li a {
 }
 
 nav.main-menu ul li.current-list-item > a {
-  color: #8c932e;
+  color: #A9B388;
 }
 
 nav.main-menu li:hover > a {
-  color: #8c932e;
+  color: #A9B388;
 }
 
 nav.main-menu li a {
@@ -710,7 +713,7 @@ nav.main-menu li a {
 }
 
 .top-header-area .header-icons a:hover {
-  color: #8c932e;
+  color: #A9B388;
 }
 
 .sticky-wrapper {
@@ -722,7 +725,7 @@ nav.main-menu li a {
 }
 
 .sticky-wrapper.is-sticky .top-header-area {
-  background-color: #051922;
+  background-color: #86A789;
   padding: 15px 0;
 }
 
@@ -741,7 +744,7 @@ ul.navbar-nav {
   left: 0;
   top: 0;
   z-index: 5555;
-  background-color: #051922;
+  background-color: #86A789;
   width: 100%;
   height: 100%;
   text-align: center;
@@ -750,7 +753,7 @@ ul.navbar-nav {
 span.close-btn {
   position: absolute;
   right: 0%;
-  color: #fff;
+  color: #000;
   top: 5%;
   cursor: pointer;
 }
@@ -784,7 +787,7 @@ a.mobile-show {
   padding: 15px;
   width: 60%;
   background-color: transparent;
-  border-bottom: 1px solid #8c932e;
+  border-bottom: 1px solid #A9B388;
   display: block;
   margin: 0 auto;
   text-align: center;
@@ -796,7 +799,7 @@ a.mobile-show {
 
 .search-bar-tablecell button[type=submit] {
   border: none;
-  background-color: #8c932e;
+  background-color: #A9B388;
   padding: 15px 30px;
   cursor: pointer;
   display: inline-block;
@@ -862,7 +865,7 @@ a.mobile-show {
 }
 
 .footer-area {
-  background-color: #051922;
+  background-color: #86A789;
   color: #fff;
   padding: 150px 0;
 }
@@ -881,7 +884,7 @@ h2.widget-title:after {
   bottom: 0;
   width: 20px;
   height: 2px;
-  background-color: #8c932e;
+  background-color: #A9B388;
   content: "";
 }
 
@@ -921,7 +924,7 @@ h2.widget-title:after {
   width: 20%;
   border: none;
   background-color: #012738;
-  color: #8c932e;
+  color: #A9B388;
   padding: 14px 0;
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
@@ -933,7 +936,7 @@ h2.widget-title:after {
 }
 
 .copyright {
-  background-color: #051922;
+  background-color: #86A789;
   border-top: 1px solid #232a35;
 }
 
@@ -946,7 +949,7 @@ h2.widget-title:after {
 }
 
 .copyright a {
-  color: #8c932e;
+  color: #A9B388;
   font-weight: 700;
 }
 
@@ -988,7 +991,7 @@ h2.widget-title:after {
   content: "\f105";
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
-  color: #8c932e;
+  color: #A9B388;
 }
 
 /* -----------------------------------------------------------------------------
@@ -1013,8 +1016,8 @@ a.boxed-btn {
 }
 
 a.boxed-btn:hover {
-  background-color: #051922;
-  color: #8c932e;
+  background-color: #86A789;
+  color: #A9B388;
 }
 
 a.bordered-btn {
@@ -1024,7 +1027,7 @@ a.bordered-btn {
 }
 
 a.bordered-btn:hover {
-  background-color: #8c932e;
+  background-color: #A9B388;
   color: #fff;
 }
 
@@ -1035,7 +1038,7 @@ ul.sub-menu a {
 }
 
 ul.sub-menu li:hover a {
-  color: #8c932e;
+  color: #A9B388;
 }
 
 .single-tof-box {
@@ -1057,7 +1060,7 @@ a.video-play-btn {
 
 a.video-play-btn:hover {
   background-color: #333;
-  color: #8c932e;
+  color: #A9B388;
 }
 
 .latest-news-bg {
@@ -1083,7 +1086,7 @@ a.tof-btn i {
 }
 
 a.tof-btn:hover {
-  color: #8c932e;
+  color: #A9B388;
 }
 
 a.tof-btn:hover i {
@@ -1122,7 +1125,7 @@ a.tof-btn:hover i {
 }
 
 .footer-box.pages ul li:hover a {
-  color: #8c932e;
+  color: #A9B388;
 }
 
 .footer-box.subscribe form button {
@@ -1132,12 +1135,12 @@ a.tof-btn:hover i {
 }
 
 .footer-box.subscribe form button:hover {
-  background-color: #8c932e;
-  color: #051922;
+  background-color: #A9B388;
+  color: #86A789;
 }
 
 .social-icons ul li:hover a {
-  color: #8c932e;
+  color: #A9B388;
 }
 
 .social-icons ul li a {
@@ -1153,8 +1156,8 @@ ul.social-link-team li a {
 }
 
 ul.social-link-team li a:hover {
-  background-color: #051922;
-  color: #8c932e;
+  background-color: #86A789;
+  color: #A9B388;
 }
 
 .counter-box {
@@ -1176,8 +1179,8 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  background-color: #051922;
-  color: #8c932e;
+  background-color: #86A789;
+  color: #A9B388;
 }
 
 div.owl-controls, .owl-controls div {
@@ -1197,7 +1200,7 @@ div.owl-controls div.owl-nav div:hover {
 }
 
 .pagination-wrap ul li:hover a {
-  background-color: #8c932e;
+  background-color: #A9B388;
 }
 
 .icons a i {
@@ -1207,7 +1210,7 @@ div.owl-controls div.owl-nav div:hover {
 }
 
 .icons a:hover i {
-  color: #8c932e;
+  color: #A9B388;
 }
 
 .tof-text a.tof-btn {
@@ -1244,8 +1247,8 @@ a.cart-btn {
 }
 
 a.cart-btn:hover {
-  background-color: #051922;
-  color: #8c932e;
+  background-color: #86A789;
+  color: #A9B388;
 }
 
 .recent-posts ul li {
@@ -1265,7 +1268,7 @@ ul.sub-menu li a {
 }
 
 ul.sub-menu li:hover a {
-  color: #8c932e !important;
+  color: #A9B388 !important;
 }
 
 .sidebar-section ul li a {
@@ -1285,7 +1288,7 @@ ul.sub-menu li:hover a {
 }
 
 .comment-text-body h4 a:hover {
-  color: #8c932e;
+  color: #A9B388;
 }
 
 ul.product-share li a {
@@ -1295,7 +1298,7 @@ ul.product-share li a {
 }
 
 ul.product-share li:hover a {
-  color: #8c932e;
+  color: #A9B388;
 }
 
 .service-menu ul li a {
@@ -1332,7 +1335,7 @@ ul.product-share li:hover a {
 
 .search-bar-tablecell button[type=submit]:hover {
   background-color: #fff;
-  color: #000;
+  color: #fff;
 }
 
 span.close-btn {
@@ -1352,7 +1355,7 @@ a.mobile-show.search-bar-icon {
 }
 
 a.mobile-show.search-bar-icon:hover {
-  color: #8c932e;
+  color: #A9B388;
 }
 
 /* -----------------------------------------------------------------------------
@@ -1400,11 +1403,11 @@ html, body {
 }
 
 .hero-text p.subtitle {
-  color: #8c932e;
+  color: #A9B388;
   font-weight: 700;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   letter-spacing: 7px;
-  font-size: 15px;
+  font-size: 60px;
 }
 
 .hero-text h1 {
@@ -1465,8 +1468,8 @@ html, body {
 }
 
 input[type="submit"] {
-  background-color: #8c932e;
-  color: #051922;
+  background-color: #A9B388;
+  color: #86A789;
   font-weight: 700;
   text-transform: uppercase;
   font-size: 15px;
@@ -1525,7 +1528,7 @@ input[type="submit"] {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: #051922;
+  background-color: #86A789;
   content: "";
   z-index: -1;
   opacity: 0.7;
@@ -1534,7 +1537,7 @@ input[type="submit"] {
 div.owl-controls, .owl-controls div {
   height: auto;
   top: 50%;
-  color: #8c932e;
+  color: #A9B388;
   font-size: 48px;
 }
 
@@ -1584,12 +1587,12 @@ div.owl-controls, .owl-controls div {
   display: block;
   font-size: 24px;
   margin-right: 15px;
-  color: #8c932e;
+  color: #A9B388;
   width: 65px;
   height: 65px;
   text-align: center;
   line-height: 60px;
-  border: 2px #8c932e dotted;
+  border: 2px #A9B388 dotted;
   border-radius: 999px;
 }
 
@@ -1639,13 +1642,13 @@ div.owl-controls, .owl-controls div {
 }
 
 .single-latest-news h3 a {
-  color: #051922;
+  color: #86A789;
 }
 
 p.blog-meta span {
   margin-right: 15px;
   opacity: 0.6;
-  color: #051922;
+  color: #86A789;
   font-size: 0.85em;
 }
 
@@ -1708,7 +1711,7 @@ p.excerpt {
 }
 
 .pagination-wrap ul li a.active {
-  background-color: #8c932e;
+  background-color: #A9B388;
 }
 
 .single-artcile-bg {
@@ -1729,7 +1732,7 @@ p.excerpt {
 .single-article-text p {
   font-size: 15px;
   line-height: 1.6;
-  color: #051922;
+  color: #86A789;
 }
 
 .comments-list-wrap {
@@ -1782,7 +1785,7 @@ span.comment-date {
 }
 
 .comment-text-body h4 a {
-  color: #051922;
+  color: #86A789;
   font-size: 80%;
   margin-left: 10px;
   border-bottom: 1px solid #aaa;
@@ -1813,7 +1816,7 @@ span.comment-date {
   padding: 15px;
   border-radius: 5px;
   font-size: 15px;
-  color: #051922;
+  color: #86A789;
 }
 
 .comment-template form p input[type=email] {
@@ -1822,7 +1825,7 @@ span.comment-date {
   padding: 15px;
   border-radius: 5px;
   font-size: 15px;
-  color: #051922;
+  color: #86A789;
   margin-left: 10px;
 }
 
@@ -1830,7 +1833,7 @@ span.comment-date {
   border: 1px solid #ddd;
   padding: 15px;
   font-size: 15px;
-  color: #051922;
+  color: #86A789;
   border-radius: 5px;
   height: 250px;
   resize: none;
@@ -1919,8 +1922,8 @@ span.comment-date {
   width: 110px;
   height: 110px;
   border-radius: 50%;
-  border: 1px solid #fff;
-  background-color: rgba(242, 129, 35, 0.75);
+  border: 1px solid #A9B388;
+  background-color: #D2E3C8;
 }
 
 .cart-banner .image-column .price-box .inner-price {
@@ -1931,11 +1934,11 @@ span.comment-date {
   margin-top: 8px;
   text-align: center;
   border-radius: 50%;
-  background-color: #8c932e;
+  background-color: #A9B388;
 }
 
 .cart-banner .image-column .price-box .inner-price .price {
-  color: #051922;
+  color: #fff;
   padding-top: 27px;
   position: relative;
   display: inline-block;
@@ -1944,7 +1947,7 @@ span.comment-date {
 }
 
 .cart-banner .image-column .price-box .inner-price .price strong {
-  color: #051922;
+  color: #fff;
   font-size: 24px;
 }
 
@@ -1989,7 +1992,7 @@ span.comment-date {
   padding: 8px 20px 14px;
   text-transform: capitalize;
   text-align: center;
-  border: 2px solid #8c932e;
+  border: 2px solid #A9B388;
 }
 
 .time-countdown .counter-column .count {
@@ -1998,7 +2001,7 @@ span.comment-date {
   font-size: 30px;
   line-height: 1.4em;
   padding: 0px 0px;
-  color: #8c932e;
+  color: #A9B388;
   font-weight: 700;
   letter-spacing: 1px;
 }
@@ -2021,7 +2024,7 @@ span.comment-date {
   display: block;
   font-size: 70%;
   margin-top: 10px;
-  color: #051922;
+  color: #86A789;
   font-weight: 600;
   opacity: 0.5;
 }
@@ -2055,8 +2058,8 @@ p.testimonial-body {
 ----------------------------------------------------------------------------- */
 a.video-play-btn {
   position: absolute;
-  background-color: #8c932e;
-  color: #051922;
+  background-color: #A9B388;
+  color: #86A789;
   width: 90px;
   height: 90px;
   text-align: center;
@@ -2094,7 +2097,7 @@ a.video-play-btn {
   width: 100%;
   height: 100%;
   content: "";
-  background-color: #051922;
+  background-color: #86A789;
   opacity: 0.3;
 }
 
@@ -2142,14 +2145,14 @@ a.video-play-btn {
   position: relative;
   font-size: 60px;
   font-weight: 700;
-  color: #8c932e;
+  color: #A9B388;
 }
 
 .shop-banner .sale-percent span {
   position: relative;
   font-size: 24px;
   line-height: 1.1em;
-  color: #051922;
+  color: #86A789;
   font-weight: 400;
   text-align: center;
   margin-right: 10px;
@@ -2242,7 +2245,7 @@ ul.social-link-team li {
 
 ul.social-link-team li a {
   color: #fff;
-  background-color: #8c932e;
+  background-color: #A9B388;
   width: 32px;
   height: 32px;
   line-height: 32px;
@@ -2307,7 +2310,7 @@ ul.social-link-team li a {
 .contact-form-box h4 i {
   position: absolute;
   left: -13%;
-  color: #8c932e;
+  color: #A9B388;
   top: 2px;
 }
 
@@ -2330,7 +2333,7 @@ ul.social-link-team li a {
 
 .find-location p i {
   margin-right: 10px;
-  color: #8c932e;
+  color: #A9B388;
 }
 
 #form_status span {
@@ -2397,7 +2400,7 @@ ul.social-link-team li a {
   font-weight: 700;
   font-size: 18px;
   margin: 15px;
-  border: 2px solid #051922;
+  border: 2px solid #86A789;
   color: #323232;
   cursor: pointer;
   padding: 8px 20px;
@@ -2405,8 +2408,8 @@ ul.social-link-team li a {
 }
 
 .product-filters ul li.active {
-  border: 2px solid #8c932e;
-  background-color: #8c932e;
+  border: 2px solid #A9B388;
+  background-color: #A9B388;
   color: #fff;
 }
 
@@ -2448,7 +2451,7 @@ p.product-price span {
 a.cart-btn {
   font-family: 'Poppins', sans-serif;
   display: inline-block;
-  background-color: #8c932e;
+  background-color: #A9B388;
   color: #fff;
   padding: 10px 20px;
 }
@@ -2486,7 +2489,7 @@ p.single-product-pricing span {
   font-size: 32px;
   font-weight: 700;
   margin-bottom: 10px;
-  color: #051922;
+  color: #86A789;
   line-height: inherit;
 }
 
@@ -2520,7 +2523,7 @@ ul.product-share li {
 
 ul.product-share li a {
   display: block;
-  color: #051922;
+  color: #86A789;
   margin-right: 10px;
 }
 
@@ -2562,7 +2565,7 @@ td.product-image img {
 .cart-table-wrap tbody tr td {
   border: 1px solid #efefef;
   padding: 20px 0;
-  color: #051922;
+  color: #86A789;
 }
 
 thead.cart-table-head tr {
@@ -2574,7 +2577,7 @@ td.product-quantity input {
 }
 
 td.product-remove a {
-  color: #051922;
+  color: #86A789;
 }
 
 .total-section table.total-table {
@@ -2620,7 +2623,7 @@ tr.total-data td strong {
 
 .coupon-form-wrap form p input[type=text] {
   border: 1px solid #ddd;
-  color: #051922;
+  color: #86A789;
   padding: 15px;
   width: 100%;
   border-radius: 5px;
@@ -2643,7 +2646,7 @@ tr.total-data td strong {
 }
 
 .card.single-accordion .card-header h5 button {
-  color: #051922;
+  color: #86A789;
   font-size: 15px;
   display: block;
   width: 100%;
@@ -2694,7 +2697,7 @@ tr.total-data td strong {
   font-weight: 900;
   line-height: 22px;
   margin-top: -11px;
-  color: #8c932e;
+  color: #A9B388;
 }
 
 .billing-address-form form p:last-child {
